<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sales</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login</string>
        <string name="username">Username</string>
            <string name="password">Password</string>
            <string name="salesperson">Sales Person</string>
                        <string name="admin">Admin</string>
                        <string name="cname">Type Of Customer</string>
                        <string name="news">New</string>
                        <string name="old">Old</string>
                        <string name="od">Details</string>
                        <string name="addr">Address</string>
                        <string name="mobile">Tel/Mobile No.</string>
                        <string name="email">Email</string>
                        <string name="name">Name</string>
                        <string name="type">Type</string>
                        <string name="x">Meet</string>
                        <string name="y">Agreed</string>
                        <string name="z">Buyed</string>
                        <string name="donation">Donation Amount</string>
                      
                        <string-array name="dropdown">
        <item>Status of withdrawal of my Employees Provident Fund (EPF) Account</item>
        <item>Status of pending work in any government department on my complaint</item>
         <item>Enquiry on MLA Constituency Development Funds</item>
        <item>Complete list of all streets and road works carried out</item>
       
        <item>Status of all complaints from central vigilance commission</item>
        <item>Details of Ration Card</item>
        
    </string-array>
                        <string name="submit">Submit</string>
</resources>