<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
   

    
            <TextView
        android:id="@+id/textView2"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/od"
        />
                        <TextView
        android:id="@+id/name"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/name"
        />
                <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine" />
            
            <TextView
        android:id="@+id/addr"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/addr"
        />
                <EditText
        android:id="@+id/addr_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/addr"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine" />
            
            <TextView
        android:id="@+id/mobile"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addr_edit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/mobile"
        />
                <EditText
        android:id="@+id/mob_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/mobile"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine" />
            
            <TextView
        android:id="@+id/email"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mob_edit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/email"
        />
                <EditText
        android:id="@+id/email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress" />
          
                <TextView
        android:id="@+id/type"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/type"
        />
                <TextView
        android:id="@+id/donation"
        style="@style/code2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/donation"
        />
                <EditText
        android:id="@+id/donation_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/donation"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine" />
                
                <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donation_edit"
        android:layout_marginTop="5dp" >

        <RadioButton
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:text="@string/x" />

        <RadioButton
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/y" />
        <RadioButton
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z" />
    </RadioGroup>
    <Button
        android:id="@+id/uploadbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/submit" />
</RelativeLayout>
</ScrollView>